# old-InitKit

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: LemFlex.cmake
cmd/initadm/: CMakeLists.txt  initadm.cc
cmd/initd/: CMakeLists.txt  cstr.hh  dlm.cc  dlm.hh  idb.cc  idb.hh  idb_parse.hh  idb_parse.l  idb_parse.y  idb_readline.cc  initd.hh  jsm.hh  jss.hh  main.cc
cmd/initpkg/: CMakeLists.txt
cmd/initpkg/system/: cpstab.m4  dbstab.m4
doc/: Architecture.md  Building.md  Systemd_flaws.md  TODO.md
head/InitKit/: config.h.in  ik_config.h.in  ik_cxxutil.hh
lib/internal/: CMakeLists.txt  cjson_ex.cc  cjson_schema.cc  cxxutil.cc  log.cc
lib/internal/compat/: strtonum.c
lib/internal/head/: auto.hh  cjson_ex.hh  cxxutil.hh  except.hh  log.hh  macros.h
lib/internal/head/compat/: strtonum.h
manual/: CMakeLists.txt  index.7
prototypes/: prototype.cc  prototype.h
